# Gothic-OpenGL

./: CMakeLists.txt  build.bat  ddraw.def  dllmain.cpp  opengl_window.cpp  opengl_window.h  stub_ddraw.h  timecycle.cfg
src/: debug.h  dllmain.cpp
src/gothic/: Gothic.h
src/imgui/: imconfig.h
src/proxy/: ProxyClipper.h  ProxyD3d7.cpp  ProxyD3d7.h  ProxyDdraw7.cpp  ProxyDdraw7.h  ProxyDevice7.cpp  ProxyDevice7.h  ProxySurface7.cpp  proxy_d3d7.cpp  proxy_ddraw7.cpp  proxy_device7.cpp  proxy_device7.h  proxy_surface7.cpp  proxy_surface7.h  proxy_vertexbuffer7.h
src/renderer/: ImGuiManager.cpp  ImGuiManager.h  Pipeline.cpp  Pipeline.h  ShadowMap.cpp  ShadowMap.h  TextureUtils.cpp  TextureUtils.h  TimeCycle.cpp  TimeCycle.h  Types.h  VkRenderer.cpp  VkRenderer.h  VkWindow.cpp  VkWindow.h  WorldReconstructor.cpp  WorldReconstructor.h  gl_renderer.cpp  gl_renderer.h  gl_window.cpp  gl_window.h  vk_renderer.cpp  vk_renderer.h  vk_window.cpp  vk_window.h
src/shaders/: GothicShaders.h  basic.vert  gothic.frag  gothic.vert  gothic_frag.spv  gothic_shaders.h  gothic_vert.spv  shadow.frag  shadow_frag.spv  spv_to_header.py
